Prevent main button from distorting

--- a/css/styles.css
+++ b/css/styles.css
@@ -6557,6 +6557,7 @@ a.mdc-list-item {
     border: none;
     outline: none;
     overflow: visible;
+    flex-shrink: 0;
     --mdc-ripple-fg-size: 0;
     --mdc-ripple-left: 0;
     --mdc-ripple-top: 0;
